// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> when centered matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        justify-content: center;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with dark color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(255, 255, 255, 0.3)",
          "borderTopColor": "#ffffff",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="white"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with invisible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <ScreenreaderText>
    Loading
  </ScreenreaderText>
</div>
`;

exports[`<Spinner /> with large size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: column;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    size={3}
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0.4rem;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with metadata color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="metadata"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with visible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 2.0rem;
      }
>
  <StyledSpinnerBase
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </CustomizedText>
</div>
`;

exports[`<Spinner /> with xSmall size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        min-height: 1.6rem;
      }
>
  <StyledSpinnerBase
    size={0}
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <CustomizedText
    className=

        {
          margin-bottom: 0;
          margin-left: 0.6rem;
          margin-right: 0;
          margin-top: 0;
        }
    color="primary"
    size="small"
  >
    Loading
  </CustomizedText>
</div>
`;
